--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "export": "next export"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.11",
     "axios": "^1.5.1",
     "cypress": "^10.0.3",
